@@ -125,6 +125,10 @@ Example:
         """Only generates list of posts for classification if this function returns True."""
         return not self.site.config["DISABLE_INDEXES"]
 
+    def should_generate_atom_for_classification_page(self, classification, post_list, lang):
+        """Only generates Atom feed for list of posts for classification if this function returns True."""
+        return not self.site.config["DISABLE_MAIN_ATOM_FEED"]
+
     def should_generate_rss_for_classification_page(self, classification, post_list, lang):
         """Only generates RSS feed for list of posts for classification if this function returns True."""
         return not self.site.config["DISABLE_MAIN_RSS_FEED"]
